Add revpatch=sbvmm to boot-args
Add revpatch=sbvmm to boot-args in order to fix the ability to update macOS 14 Sonoma

--- a/EFI/OC/config_hard.plist
+++ b/EFI/OC/config_hard.plist
@@ -2054,7 +2054,7 @@
 				Rg==
 				</data>
 				<key>boot-args</key>
-				<string>darkwake=8 lilucpu=10 keepsyms=1</string>
+				<string>darkwake=8 lilucpu=10 keepsyms=1 revpatch=sbvmm</string>
 				<key>csr-active-config</key>
 				<data>
 				ZwAAAA==
